--- a/src/components/ProjectsList.astro
+++ b/src/components/ProjectsList.astro
@@ -10,5 +10,6 @@ const { projects } = Astro.props;
 ---
 
 <section class="mb-24 grid grid-cols-2 gap-x-16 gap-y-14 max-md:grid-cols-1">
-  {projects.map((project) => <Project project={project} />)}
+  {projects.map((project) => <Project project={project} />)
+}
 </section>
