--- a/src/components/Project.astro
+++ b/src/components/Project.astro
@@ -1,22 +1,26 @@
 ---
 import type { CollectionEntry } from "astro:content";
 import { Github } from "lucide-react";
+import { ExternalLink } from "lucide-react"
 
 interface Props {
   project: CollectionEntry<"projects">;
 }
 
 const { project } = Astro.props;
+
+const isGitHubLink = project.data.url.includes("github");
+const linkText = isGitHubLink ? "Code" : "Link"
 ---
 
-<article class="flex flex-col gap-1">
+<article class="flex flex-col gap-1 rounded-lg border border-muted p-4 hover:shadow-lg hover:shadow-muted transition-all">
   <a href={`/projects/${project.slug}`}>
-    <h2>{project.data.title}</h2>
+    <h2 class="text-xl font-semibold">{project.data.title}</h2>
   </a>
   <a href={`/projects/${project.slug}`}>
     <div
       class="flex h-24 w-48 items-center justify-center overflow-hidden rounded"
-      transition:name="project-img"
+      transition:name={project.slug}
       transition:animate="initial"
     >
       <img
@@ -26,14 +30,14 @@ const { project } = Astro.props;
       />
     </div>
   </a>
-  <a href={project.data.url} class="flex gap-1">
-    <Github />
-    Code
+  <a href={project.data.url} class="flex gap-1 pt-2">
+    {isGitHubLink ? <Github /> : <ExternalLink />}
+    { linkText }
   </a>
-  <div class="flex gap-1">
+  <div class="flex gap-1 flex-wrap py-2">
     {
       project.data.stack.map((tech) => (
-        <span class="mr-2 rounded-full bg-gray-200 px-2 py-1 text-sm text-gray-800 dark:bg-gray-800 dark:text-gray-200">
+        <span class="mr-2 rounded-full bg-gray-200 px-2 py-1 text-sm text-gray-800 dark:bg-gray-800 dark:text-gray-200 hover:shadow-sm">
           {tech}
         </span>
       ))
